# jirajumper

./: CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tasks.py
docs/: index.md
docs/adr/: 001-json-rpc.md
jeeves_jira/: __init__.py  cli.py  client.py  errors.py  models.py
jeeves_jira/cache/: __init__.py  actions.py  models.py
jeeves_jira/commands/: clone.py  list_issues.py  select.py
jirajumper/: __init__.py  cli.py  client.py  conversions.py  default_options.py  errors.py  models.py
jirajumper/cache/: __init__.py  actions.py  cache.py
jirajumper/commands/: assign.py  clone.py  fork.py  graph.py  link.py  list_issues.py  select.py  status.py  update.py
jirajumper/fields/: __init__.py  defaults.py  field.py  repository.py
tests/: test_generate_jql.py  test_resolve.py
