[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "jeeves-jira"
description = "JIRA integration for jeeves.sh"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/jeeves-sh/jeeves-jira"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.plugins.jeeves]
jira = "jeeves_jira:app"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
jira = "^3.0.1"
backoff = "^1.11.1"


[tool.poetry.dev-dependencies]
mypy = "^0.910"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^2.12"
pytest-randomly = "^3.8"

m2r2 = "^0.2"
tomlkit = "^0.7"
flake8 = "3.9.0"
flakehell = "^0.9.0"

[tool.flakehell]
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"
